docs/errors/examples/call-stack-overflow/call-stack-overflow.expected.txt
error[E5901]: call stack overflow
  --> call-stack-overflow.grob:4:12
   |
 4 |     return countdown(n - 1)
   |            ^^^^^^^^^^^^^^^^
   |
   = note: maximum call depth exceeded at a recursive call to 'countdown'
